fix: align center with tinyMCE editor [#385]

--- a/assets/scss/elements/_content.scss
+++ b/assets/scss/elements/_content.scss
@@ -126,6 +126,7 @@ pre {
 }
 
 .aligncenter {
+  display: block;
   text-align: center;
   margin: 0 auto;
 }
