--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1827,6 +1827,7 @@ pre {
 }
 
 .aligncenter {
+  display: block;
   text-align: center;
   margin: 0 auto;
 }
